fix(ui): prevent delete button from clipping in application tiles view

--- a/ui/src/app/applications/components/applications-list/applications-tiles.scss
+++ b/ui/src/app/applications/components/applications-list/applications-tiles.scss
@@ -21,6 +21,12 @@
 
     &__actions {
         margin-top: auto;
+
+        .applications-list__entry--actions {
+            overflow: visible;
+            text-overflow: clip;
+            white-space: nowrap;
+        }
     }
 
     .argo-table-list__row {
